--- a/startup-notify/startup-notify.service
+++ b/startup-notify/startup-notify.service
@@ -3,7 +3,7 @@ Description=pushbullet startup notification
 After=network-online.target zfs-import.target zfs-mount.service
 
 [Service]
-Type=oneshot
+Type=idle
 ExecStart=/bin/bash -c "/usr/local/bin/pb push \"$(/usr/bin/gen-status-msg)\"" 
 
 [Install]
