--- a/google-drive/etc/google-drive-sync.service
+++ b/google-drive/etc/google-drive-sync.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Sync lissheidr google drive to /mnt/zpool0/home/liss/google_drive
+Requires=mnt-home-liss-google_drive.mount
 
 [Service]
 WorkingDirectory=/mnt/zpool0/home/liss/google_drive
