refactoring, makefile to install and now checks if host was already online

--- a/zfs-backup/etc/zfs-backup.service
+++ b/zfs-backup/etc/zfs-backup.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=backups zfs pool onto remote
+Description=backup zfs pool onto remote
 
 [Service]
 ExecStart=/usr/local/bin/zfs-backup.sh
