--- a/docker-fix/etc/fix-docker.service
+++ b/docker-fix/etc/fix-docker.service
@@ -4,7 +4,7 @@ Before=docker.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/local/sbin/fix-docker
+ExecStart=/usr/local/sbin/fix-docker.sh
 
 [Install]
 WantedBy=multi-user.target
