added config, added ability to only send certain snapshots

--- a/zfs-backup/Makefile
+++ b/zfs-backup/Makefile
@@ -2,6 +2,8 @@ install:
 	install -d /etc/systemd/system
 	install etc/zfs-backup.service /etc/systemd/system
 	install etc/zfs-backup.timer /etc/systemd/system
+	
+	install etc/zfs-backup.conf /etc/zfs-backup.conf
 
 	install -d /usr/local/sbin
 	install src/zfs-backup.sh /usr/local/sbin/zfs-backup
@@ -12,4 +14,5 @@ uninstall:
 
 	rm /etc/systemd/system/zfs-backup.service
 	rm /etc/systemd/system/zfs-backup.timer
+	rm /etc/zfs-backup.conf
 	rm /usr/local/sbin/zfs-backup
